codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---









• 工作中 (0秒 • 按 esc 中断)

• 已排队的后续消息
  ↳ Queued while /review is running.
    ⌥ + ↑ edit last queued message

› 让 Codex 做任何事

  ? 查看快捷键                                            100% 剩余上下文
