codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_model_with_reasoning_fast_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› 让 Codex 做任何事                                                      "
"                                                                                "
"  gpt-5.4 xhigh fast · 100% left · /tmp/project                                 "
