codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0秒 • 按 esc 中断)                                         "
"                                                                                "
"                                                                                "
"› 让 Codex 做任何事                                                      "
"                                                                                "
"  ? 查看快捷键                                            100% 剩余上下文       "
