codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_begin_restores_working_status.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• 工作中 (0秒 • 按 esc 中断) · 1 个后台终端正在运行 · /ps 查看 · /clean 关闭    "
"                                                                                "
"                                                                                "
"› 让 Codex 做任何事                                                      "
"                                                                                "
"  ? 查看快捷键                                            100% 剩余上下文       "
