codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• 等待后台终端 (0秒 • 按 esc…
  └ cargo test -p codex-core -- --exact…


› 让 Codex 做任何事

  ? 查看快捷键            100% 剩余上下文
