codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__update_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---
  ✨ 新版本可用！是否更新？

  完整更新说明: https://github.com/openai/codex/releases/latest


› 1. 是，立即更新
  2. 暂不更新
  3. 不再提示

  按 enter 确认或按 esc 返回
